# mcp-jar-indexer

./: .editorconfig  .gitignore  CLAUDE.md  PRD_mcptool.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
guide/: code_style_guide.md  codebase.md  suggested_commands.md  task_completion_checklist.md
spec/: 01_overview.md  02_architecture.md  02_feature_sourcejar.md  03_mcp_tool_specification.md  03_tech_stach.md  CLAUDE.md  PRD_sourcejar.md  TODO.md  mcp_tool_specification.md
spec/dev/: 00_register_source.md  02_feature_sourcejar.md  02_mcp_tool_specification.md  02_register_source.md
spec/dev/index_artifact/: overview.md
spec/dev/index_artifact/phase_1/: TODO.md  design_spec.md
spec/dev/register_source/: TODO.md  design_spec.md
src/: CLAUDE.md  main.py
src/core/: __init__.py  git_handler.py  source_processor.py  storage.py
src/jartype/: __init__.py  core_types.py
src/tools/: __init__.py  get_file.py  index_artifact.py  list_artifacts.py  list_folder_tree.py  register_source.py  search_cached_artifact.py  search_file_content.py  search_file_names.py
src/types/: __init__.py
src/utils/: __init__.py  artifact_utils.py  cache_utils.py  download_utils.py  file_utils.py  filesystem_exploration.py  path_utils.py  source_extraction.py  validation.py
tests/: __init__.py
tests/core/: test_git_handler.py  test_source_processor.py  test_storage.py
tests/tools/: __init__.py  test_get_file.py  test_index_artifact.py  test_list_artifacts.py  test_list_folder_tree.py  test_register_source.py  test_search_cached_artifact.py  test_search_file_content.py  test_search_file_names.py
tests/utils/: __init__.py  test_artifact_utils.py  test_cache_utils.py  test_download_utils.py  test_file_utils.py  test_filesystem_exploration.py  test_path_utils.py  test_phase1_functions.py  test_source_extraction.py  test_utility_functions.py
