[project]
name = "jar-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "mcp>=1.12.4",
    "requests>=2.32.4",
    "tree-sitter>=0.25.1",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-kotlin>=1.1.0",
]